--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   jpa:
     # 打印sql语句
     show-sql: true
-    open-in-view: false
+    open-in-view: true
 #    hibernate:
 #      ddl-auto: update
   thymeleaf:
